@@ -17,8 +17,40 @@ $Id$
 
 import unittest
 
+from Acquisition import Implicit
+from zope.interface import implements
+from zope.component import getMultiAdapter
+from Products.CMFCore.interfaces import ICatalogTool
+from Products.CMFCore.tests.base.dummy import DummyContent
+from Products.CMFCore.interfaces import IIndexableObject
+from Products.CMFCore.interfaces import IContentish
+
 from Products.CMFCore.tests.base.testcase import SecurityTest
 
+class FakeFolder(Implicit):
+    id = 'portal'
+
+class FakeCatalog(Implicit):
+    implements(ICatalogTool)
+    id = 'portal_catalog'
+
+class FakeWorkflowTool(Implicit):
+    id = 'portal_workflow'
+
+    def __init__(self, vars):
+        self._vars = vars
+
+    def getCatalogVariablesFor(self, ob):
+        return self._vars
+
+class CatalogDummyContent(DummyContent):
+
+    """ Dummy content that already provides IIndexableObject
+        and therefore does not need a wrapper to be registered
+    """
+
+    implements(IIndexableObject)
+    allowedRolesAndUsers = ['Manager'] # default value
 
 class IndexableObjectWrapperTests(unittest.TestCase):
 
@@ -27,11 +59,16 @@ class IndexableObjectWrapperTests(unittest.TestCase):
 
         return IndexableObjectWrapper
 
-    def _makeOne(self, *args, **kw):
-        return self._getTargetClass()(*args, **kw)
+    def _makeOne(self, vars, obj):
+        self.root = FakeFolder()
+        self.root.portal_catalog = FakeCatalog()
+        self.root.portal_workflow = FakeWorkflowTool(vars)
+        catalog = self.root.portal_catalog
+        return self._getTargetClass()(obj, catalog)
 
     def _makeContent(self, *args, **kw):
         from Products.CMFCore.tests.base.dummy import DummyContent
+
         return DummyContent(*args, **kw)
 
     def test_interfaces(self):
@@ -69,12 +106,22 @@ class IndexableObjectWrapperTests(unittest.TestCase):
     def test_provided(self):
         from Products.CMFCore.interfaces import IContentish
         from Products.CMFCore.interfaces import IIndexableObjectWrapper
+        from Products.CMFCore.interfaces import IIndexableObject
 
         obj = self._makeContent()
         w = self._makeOne({}, obj)
         self.failUnless(IContentish.providedBy(w))
         self.failUnless(IIndexableObjectWrapper.providedBy(w))
+        self.failUnless(IIndexableObject.providedBy(w))
 
+    def test_adapts(self):
+        from zope.component import adaptedBy
+        from Products.CMFCore.interfaces import IContentish
+        from Products.CMFCore.interfaces import ICatalogTool
+
+        w = self._getTargetClass()
+        adapts =  adaptedBy(w) 
+        self.assertEqual(adapts, (IContentish, ICatalogTool))
 
 class CatalogToolTests(SecurityTest):
 
@@ -87,8 +134,7 @@ class CatalogToolTests(SecurityTest):
         return self._getTargetClass()(*args, **kw)
 
     def _makeContent(self, *args, **kw):
-        from Products.CMFCore.tests.base.dummy import DummyContent
-        return DummyContent(*args, **kw)
+        return CatalogDummyContent(*args, **kw)
 
     def test_interfaces(self):
         from zope.interface.verify import verifyClass
@@ -144,7 +190,7 @@ class CatalogToolTests(SecurityTest):
         catalog = self._makeOne()
         catalog.addIndex('allowedRolesAndUsers', 'KeywordIndex')
         dummy = self._makeContent(catalog=1)
-        dummy._View_Permission = ('Blob',)
+        dummy.allowedRolesAndUsers = ('Blob',)
         catalog.catalog_object(dummy, '/dummy')
 
         self.loginWithRoles('Blob')
@@ -156,7 +202,7 @@ class CatalogToolTests(SecurityTest):
         catalog = self._makeOne()
         catalog.addIndex('allowedRolesAndUsers', 'KeywordIndex')
         dummy = self._makeContent(catalog=1)
-        dummy._View_Permission = ('Blob',)
+        dummy.allowedRolesAndUsers = ('Blob',)
         catalog.catalog_object(dummy, '/dummy')
 
         self.loginWithRoles('Blob')
@@ -169,7 +215,7 @@ class CatalogToolTests(SecurityTest):
         catalog = self._makeOne()
         catalog.addIndex('allowedRolesAndUsers', 'KeywordIndex')
         dummy = self._makeContent(catalog=1)
-        dummy._View_Permission = ('Blob',)
+        dummy.allowedRoleAndUsers = ('Blob',)
         catalog.catalog_object(dummy, '/dummy')
 
         self.loginWithRoles('Waggle')
@@ -181,7 +227,7 @@ class CatalogToolTests(SecurityTest):
         catalog = self._makeOne()
         catalog.addIndex('allowedRolesAndUsers', 'KeywordIndex')
         dummy = self._makeContent(catalog=1)
-        dummy._View_Permission = ('Blob',)
+        dummy.allowedRolesAndUsers = ('Blob',)
         catalog.catalog_object(dummy, '/dummy')
 
         self.loginWithRoles('Waggle')
@@ -198,7 +244,7 @@ class CatalogToolTests(SecurityTest):
         catalog.addIndex('expires', 'DateIndex')
         now = DateTime()
         dummy = self._makeContent(catalog=1)
-        dummy._View_Permission = ('Blob',)
+        dummy.allowedRolesAndUsers = ('Blob',)
 
         self.loginWithRoles('Blob')
 
@@ -259,7 +305,7 @@ class CatalogToolTests(SecurityTest):
         catalog.addIndex('expires', 'DateIndex')
         now = DateTime()
         dummy = self._makeContent(catalog=1)
-        dummy._View_Permission = ('Blob',)
+        dummy.allowedRolesAndUsers = ('Blob',)
 
         self.loginWithRoles('Blob')
 
@@ -293,7 +339,7 @@ class CatalogToolTests(SecurityTest):
         catalog.addIndex('expires', 'DateIndex')
         now = DateTime()
         dummy = self._makeContent(catalog=1)
-        dummy._View_Permission = ('Blob',)
+        dummy.allowedRolesAndUsers = ('Blob',)
 
         self.loginWithRoles('Blob')
 
@@ -439,6 +485,40 @@ class CatalogToolTests(SecurityTest):
         self.failUnless('Blob' in arus)
         self.failUnless('user:%s' % user.getId() in arus)       
 
+    def test_wrapping1(self):
+        # DummyContent implements IIndexableObject
+        # so should be indexed
+        dummy = self._makeContent(catalog=1)
+        ctool = self._makeOne()
+        ctool.catalog_object(dummy, '/dummy')
+        self.assertEqual(1, len(ctool._catalog.searchResults()))
+
+    def test_wrapping2(self):
+        # DummyContent does not implement IIndexableObject
+        # no wrapper registered - should fall back to using
+        # wrapper class directly
+        dummy = DummyContent(catalog=1)
+        ctool = self._makeOne()
+        ctool.catalog_object(dummy, '/dummy')
+        self.assertEqual(1, len(ctool._catalog.searchResults()))
+
+    def test_wrapping3(self):
+        # DummyContent does not implement IIndexableObject
+        # wrapper registered - should look this up
+
+        def FakeWrapper(object, catalog):
+            return object
+
+        from zope.component import getSiteManager
+        self.sm = getSiteManager()
+        self.sm.registerAdapter( FakeWrapper
+                               , (IContentish, ICatalogTool)
+                               , IIndexableObject )
+
+        dummy =DummyContent(catalog=1)
+        ctool = self._makeOne()
+        ctool.catalog_object(dummy, '/dummy')
+        self.assertEqual(1, len(ctool._catalog.searchResults()))
 
 def test_suite():
     return unittest.TestSuite((
